tampilan kasar login (belum berfungsi)

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,21 @@
 extends layout
 
 block content
-  h1= Login
-  p Ini buat Login
+	center 
+		<img src = "images/logo.png" style="margin-bottom: 80px; margin-top: 50px;" /><br>
+		<input type="text" name="usern" placeholder="Email atau Username" />
+		br
+		<input type="password" name="pass" placeholder="Password"/>
+		br
+		<input type="submit" name="submit" value="Log In"/>
+		br
+		div(class="lupaPass") Lupa password?
+		br
+		br
+		button <img src = "images/facebook-logo.png" width="12px" /> Log In dengan Facebook 
+		br
+		button <img src = "images/twitter-logo.png" width="12px" /> Log In dengan Twitter
+		br
+		p Prelo tidak akan post apapun tanpa persetujuan kamu
+		hr
+		p Belum punya ID Prelo? Daftar sekarang
