--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,79 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html {
+	width: 950px;
 }
+
+body {
+	padding: 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	background-color: #42c9c2;
+	color: #FFFFFF;
+}
+
 a {
-  color: #00b7ff;
+	color: #FFFFFF;
+	font-weight: bold;
+}
+
+::-webkit-input-placeholder { 
+  color: #d7d7d7;
+  font-size: 12px;
+}
+
+.lupaPass {
+	font-size: 12px;
+	width: 610px;
+	display: inline;
+	float: right;
+	margin-bottom: 30px;
+}
+
+input[type=text], input[type=password] {
+	width: 300px;
+	background-color: #1bada4;
+	padding: 10px;
+	color: #FFFFFF;
+	border: none;
+	margin-bottom: 10px;
+	font-size: 14px;
+}
+
+input[type=submit] {
+	width: 320px;
+	background-color: transparent;
+	padding: 10px;
+	color: #FFFFFF;
+	border: 1px solid #FFFFFF;
+	margin-bottom: 10px;
+	font-size: 14px;
+}
+
+input[type=submit]:hover {
+	background-color: #1bada4;
+	border: none;
+	cursor: pointer;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+button {
+	width: 320px;
+	background-color: #1bada4;
+	padding: 10px;
+	color: #FFFFFF;
+	border: none;
+	margin-bottom: 5px;
+	font-size: 12px;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.24),0 2px 2px 0 rgba(0,0,0,0.19);
+}
+
+button:hover {
+	background-color: transparent;
+	color: #FFFFFF;
+	border: 1px solid #FFFFFF;
+	cursor: pointer;
+}
+
+hr {
+	width: 400px;
+	border: 1px solid #FFFFFF;
+	margin-bottom: 40px;
 }
