--- a/views/index.pug
+++ b/views/index.pug
@@ -3,19 +3,22 @@ extends layout
 block content
 	center 
 		<img src = "images/logo.png" style="margin-bottom: 80px; margin-top: 50px;" /><br>
-		<input type="text" name="usern" placeholder="Email atau Username" />
+		form(id="login" onsubmit="return validasi()" method="post")
+			<input type="text" name="usern" placeholder="Email atau Username" />
+			br
+			<input type="password" name="pass" placeholder="Password"/>
+			br
+			<input type="submit" name="submit" value="Log In"/>
+			br
+		div(class="lupaPass" onclick="popupBox()") Lupa password?
 		br
-		<input type="password" name="pass" placeholder="Password"/>
 		br
-		<input type="submit" name="submit" value="Log In"/>
+		button(onclick="popupBox()") <img src = "images/facebook-logo.png" width="12px" /> Log In dengan Facebook 
 		br
-		div(class="lupaPass") Lupa password?
+		button(onclick="popupBox()") <img src = "images/twitter-logo.png" width="12px" /> Log In dengan Twitter
 		br
-		br
-		button <img src = "images/facebook-logo.png" width="12px" /> Log In dengan Facebook 
-		br
-		button <img src = "images/twitter-logo.png" width="12px" /> Log In dengan Twitter
-		br
-		p Prelo tidak akan post apapun tanpa persetujuan kamu
+		p(class="disclaimer") Prelo tidak akan post apapun tanpa persetujuan kamu
 		hr
-		p Belum punya ID Prelo? Daftar sekarang
+		p
+			normal Belum punya ID Prelo? 
+			b(onclick="popupBox()") Daftar sekarang
