--- a/views/index.pug
+++ b/views/index.pug
@@ -13,12 +13,12 @@ block content
 		div(class="lupaPass" onclick="popupBox()") Lupa password?
 		br
 		br
-		button(onclick="popupBox()") <img src = "images/facebook-logo.png" width="12px" /> Log In dengan Facebook 
+		button(onclick="popupBox()" class="button-login") <img src = "images/facebook-logo.png" width="12px" /> Log In dengan Facebook 
 		br
-		button(onclick="popupBox()") <img src = "images/twitter-logo.png" width="12px" /> Log In dengan Twitter
+		button(onclick="popupBox()" class="button-login") <img src = "images/twitter-logo.png" width="12px" /> Log In dengan Twitter
 		br
 		p(class="disclaimer") Prelo tidak akan post apapun tanpa persetujuan kamu
 		hr
 		p
 			normal Belum punya ID Prelo? 
-			b(onclick="popupBox()") Daftar sekarang
+			b(onclick="popupBox()" class="b-login") Daftar sekarang
