--- a/views/lovelist.pug
+++ b/views/lovelist.pug
@@ -1,5 +1,71 @@
 extends layout
 
 block content
-  h1= Lovelist
-  p Ini buat #{title}
+	center
+		div
+			<img src="images/menu.png" height="20px;" /> 
+			<img src = "images/logo.png" height="30px;" style="padding-left: 100px; padding-right: 100px;" />
+			<img src="images/search.png" height="20px;" style="padding-right: 10px;" /> 
+			<img src="images/cart.png" height="20px;" /> 
+			<br><br>
+		section
+			div(id="title")
+				p(class="p-lovelist") LOVELIST
+				hr(class="hr-lovelist-title")
+			div(id="content")
+				div(style="float: left; margin-right: 15px;")
+					<img src="images/photo.png" height="80px;" style="margin-bottom: 15px;" /> 
+				div(class="product-name") Vans Disney
+				div(class="price") Rp 720.000
+				div(style="color: #dddddd; font-size: 10px; margin-top: 15px;")
+					<img src="images/comment.png" height="15px;" style="vertical-align: middle;"> 
+					span(style="margin-right: 10px;") 2	
+					<img src="images/love.png" height="15px;" style="vertical-align: middle;"> 7
+				div(style="clear: both;")
+					hr(class="hr-lovelist-content")
+
+				div(style="float: left; margin-right: 15px;")
+					<img src="images/photo.png" height="80px;" style="margin-bottom: 15px;" /> 
+				div(class="product-name") Vans Disney
+				div(class="price") Rp 720.000
+				div(style="color: #dddddd; font-size: 10px; margin-top: 15px;")
+					<img src="images/comment.png" height="15px;" style="vertical-align: middle;"> 
+					span(style="margin-right: 10px;") 2	
+					<img src="images/love.png" height="15px;" style="vertical-align: middle;"> 7
+				div(style="clear: both;")
+					hr(class="hr-lovelist-content")
+
+				div(style="float: left; margin-right: 15px;")
+					<img src="images/photo.png" height="80px;" style="margin-bottom: 15px;" /> 
+				div(class="product-name") Vans Disney
+				div(class="price") Rp 720.000
+				div(style="color: #dddddd; font-size: 10px; margin-top: 15px;")
+					<img src="images/comment.png" height="15px;" style="vertical-align: middle;"> 
+					span(style="margin-right: 10px;") 2	
+					<img src="images/love.png" height="15px;" style="vertical-align: middle;"> 7
+				div(style="clear: both;")
+					hr(class="hr-lovelist-content")
+
+				div(style="float: left; margin-right: 15px;")
+					<img src="images/photo.png" height="80px;" style="margin-bottom: 15px;" /> 
+				div(class="product-name") Vans Disney
+				div(class="price") Rp 720.000
+				div(style="color: #dddddd; font-size: 10px; margin-top: 15px;")
+					<img src="images/comment.png" height="15px;" style="vertical-align: middle;"> 
+					span(style="margin-right: 10px;") 2	
+					<img src="images/love.png" height="15px;" style="vertical-align: middle;"> 7
+				div(style="clear: both;")
+					hr(class="hr-lovelist-content")
+
+				div(style="float: left; margin-right: 15px;")
+					<img src="images/photo.png" height="80px;" style="margin-bottom: 15px;" /> 
+				div(class="product-name") Vans Disney
+				div(class="price") Rp 720.000
+				div(style="color: #dddddd; font-size: 10px; margin-top: 15px;")
+					<img src="images/comment.png" height="15px;" style="vertical-align: middle;"> 
+					span(style="margin-right: 10px;") 2	
+					<img src="images/love.png" height="15px;" style="vertical-align: middle;"> 7
+				div(style="clear: both; margin-bottom: 20px;")
+
+			div(id="footer")
+				button(class="button-lovelist") Load More
