--- a/views/lovelist.pug
+++ b/views/lovelist.pug
@@ -2,9 +2,9 @@ extends layout
 
 block content
 	center
-		div
+		div(class="header")
 			<img src="images/menu.png" height="20px;" /> 
-			<img src = "images/logo.png" height="30px;" style="padding-left: 100px; padding-right: 100px;" />
+			<img src = "images/logo.png" height="30px;" style="padding-left: 130px; padding-right: 110px; padding-top: 10px;" />
 			<img src="images/search.png" height="20px;" style="padding-right: 10px;" /> 
 			<img src="images/cart.png" height="20px;" /> 
 			<br><br>
