--- a/views/index.pug
+++ b/views/index.pug
@@ -3,10 +3,10 @@ extends layout
 block content
 	center 
 		<img src = "images/logo.png" style="margin-bottom: 80px; margin-top: 50px;" /><br>
-		form(id="login" onsubmit="return validasi()" method="post")
-			<input type="text" name="usern" placeholder="Email atau Username" />
+		form(id="login" onsubmit="return validasi()" method="POST")
+			<input type="text" name="username_or_email" placeholder="Email atau Username" />
 			br
-			<input type="password" name="pass" placeholder="Password"/>
+			<input type="password" name="password" placeholder="Password"/>
 			br
 			<input type="submit" name="submit" value="Log In"/>
 			br
