--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
 	center 
 		<img src = "images/logo.png" style="margin-bottom: 80px; margin-top: 50px;" /><br>
-		form(id="login" onsubmit="return validasi()" method="POST")
+		form(id="login" method="POST")
 			<input type="text" name="username_or_email" placeholder="Email atau Username" />
 			br
 			<input type="password" name="password" placeholder="Password"/>
